--- a/server/code/package.json
+++ b/server/code/package.json
@@ -5,6 +5,20 @@
   "description": "A simple membership system built with Koa and MongoDB",
   "author": "Hermann Yung <hermannyung@gmail.com>",
   "dependencies": {
-    "koa": "^0.18.1"
+    "co": "^4.5.2",
+    "co-bcrypt": "^1.0.0",
+    "koa": "^0.18.1",
+    "koa-bodyparser": "^1.5.0",
+    "koa-logger": "^1.2.2",
+    "koa-passport": "^1.1.6",
+    "koa-qs": "^2.0.0",
+    "koa-router": "^4.3.2",
+    "koa-session": "^3.1.0",
+    "koa-static": "^1.4.9",
+    "koa-swig": "^2.0.0",
+    "koa-validate": "^0.2.11",
+    "mongoose": "^4.0.2",
+    "mongoose-auto-increment": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
